fixed overflow errors on splash and main.

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,5 +1,4 @@
 #main__container {
-    position: absolute;
     padding-top: 40vh;
     top: 100vh;
 }
