--- a/src/components/Splash/Splash.css
+++ b/src/components/Splash/Splash.css
@@ -3,7 +3,6 @@
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
-    overflow-y: scroll;
 }
 
 #splash__main {
